fixed spacing issues

--- a/style.css
+++ b/style.css
@@ -57,7 +57,6 @@ h1 {
   font-weight: 500;
   font-size: 1.5rem;
   letter-spacing: 1px;
-  padding-bottom: 5px;
   margin: 0;
 }
 
@@ -80,7 +79,7 @@ h2 {
   flex-direction: column;
   gap: 15px;
   align-items: center;
-  width: 100%;
+  width: 90%;
 }
 
 .socials {
